# SICT_InterView

./: 930历年考点归纳.xlsx  CMakeLists.txt  LinkList.h  LinkList.hpp  SICT_INTERVIEW_STATISTIC.xlsx  main.cpp  myGraph.h  myLinkList.hpp  myQueue.h  myStack.h  myTree.h  my_answer.md  readme.md  沈阳计算所复试个人解答.md
2006/: T1.c  T1.cpp  T2.c  T2.cpp  T3.c  T3.cpp
2007/: T1.c  T1.cpp  T2.c  T2.cpp  T3.c  T3.cpp  T4.cpp  T5.cpp
2008/: T1.cpp  T2.cpp  T3.cpp  T4.cpp  T5.cpp
2010/: T1.cpp  T2.cpp  T3.cpp  T4.cpp
2017/: T1.c
2018/: T1.cpp  T2.cpp  T3.cpp  T4.cpp  data.txt
2019/: T1.cpp  T2.cpp  T3_1.cpp  data.txt
2020/: T1.cpp  T2.cpp
2022/: T1.cpp
