cmake_minimum_required(VERSION 3.24)
project(SICT_InterView_Code)

set(CMAKE_CXX_STANDARD 17)

add_executable(SICT_InterView_Code main.cpp)
add_executable(2006T1 2006/T1.cpp)
add_executable(2006T2 2006/T2.cpp)
add_executable(2006T3 2006/T3.cpp)

add_executable(2007T1 2007/T1.cpp)
add_executable(2007T2 2007/T2.cpp)
add_executable(2007T3 2007/T3.cpp)
add_executable(2007T4 2007/T4.cpp)
add_executable(2007T5 2007/T5.cpp)

add_executable(2008T1 2008/T1.cpp)
add_executable(2008T2 2008/T2.cpp)
add_executable(2008T3 2008/T3.cpp)
add_executable(2008T4 2008/T4.cpp)